*Tue Nov 8 2011 Henri Gavin <.> 0.20100105
- user-manual.html - slight simplification of Windows installation instructions

*Thu Nov 3 2011 Henri Gavin <.> 0.20100105
- user-manual.html - small wordsmith edits regarding experimental validation of shear correction factors.

*Thu Nov 3 2011 Henri Gavin <.> 0.20100105
- update user-manual.html, add Cowper's 1966 paper to the list of references for shear correction factors

*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
- wordsmithing in user-manual.html regarding shear effects

*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
- correction to user-manual.html regarding shear correction factor equations 

*Mon Oct 31 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors and torsion
constants

*Sun Oct 30 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors

*Sun Mar 27 2011 Henri Gavin <.> 0.20100105
- add .CSV input data template from Simon Fendall

*Mon Mar 7 2011 Henri Gavin <.> 0.20100105
- modify computation of internal forces from interior-span point loads, now the shear force drop due to interior point loads occurs over a span of 2*dx.

*Wed Feb 2 2011 Henri Gavin <.> 0.20100105
-   re-commit after source-forge hack of Jan 28 2011.

*Thu Dec 23 2010 Henri Gavin <.> 0.20100105
- add caveat on maximum shear stress in user manual

*Wed Dec 1 2010 Henri Gavin <.> 0.20100105
- fixed bug related to linear analysis of temperature loads
- added ascii (ANSI.SYS) color to screen output hpgUtils.c hpgUtils.h
- The Win32 "Command Prompt" does not recognize ANSI.SYS escape sequences at
all.
- the .ZIP source code distribution now includes the examples
- more efficient .ZIP archiving in .zipdist.sh

*Fri Nov 26 2010 Henri Gavin <.> 0.20100105
- updated user-manual.html with Gnuplot links to www.gnuplot.info
and removed links to http://www.duke.edu/~hpgavin/gnuplot.html

*Wed Nov 10 2010 Henri Gavin <.> 0.20100105